--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,1 @@
-samples/000066_2.jpg
-samples/004221_2.jpg
-samples/004228_2.jpg
-samples/004235_4.jpg
-samples/004255_4.jpg
-samples/004309_4.jpg
-samples/010015_4.jpg
-samples/010016_4.jpg
-samples/canny.png
-samples/dilated.png
-samples/equalized.png
-samples/gray.png
-samples/image.png
+/samples/test
